= 20220929 =
 * Update: Removed index.php requirements for block theme

= 20211203 =
 * Update: FSE theme folders to the new proposed structure

= 20210921 =
* Fix: `tc_filename()` to always return theme-relative paths when possible.
* Fix: Correct the block theme adaptation check to work in WordPress.org Theme Uploader
* Fix: Update the texts of the script tag check and the WP_Filesystem check.
* Fix: Allow pre, link and code tags when presenting the result.
* Fix: Allow phpcs.xml and development tool configuration files (postcss, stylelint etc).
* Fix: Correct the theme information display on the plugin page.
* Fix: Add template-editing to the list of allowed tags.
* Fix: Solve PHP notice in the i18n check.
* Reduce the severity level of the following checks:
    Favicon, wp_title, title tag
* Added checks:
    Requires PHP versioning, Tested up to versioning, add_role, copyright notice
* Removed checks:
    content_width, Theme URI and Author URI must not be the same, emoji scripts

= 20210617 =
* Introduced a generic function, run_themechecks_against_theme(), that allows it to be run against a WP_Theme instance, rather than relying upon global state
* Adapted checks for block themes. Create a list of the checks that are skipped for block themes (full site editing themes)
* Fix: Avoid false positives in title checks
* Fix invalid regular expression in the customizer check
* Fix: Avoid false positives when .svn/.git/.hg/.bzr exists within the path to a theme
* Fix: Allow .map files
* Fix Non GPL sites check: Adjust the unsplash text, add vecteezy and update a link for undraw that was not correct
* Fixed a bug where all the theme information was not showing on the plugins admin page
* Added a check for files required by block themes
* Added checks for block patterns and block styles
* Added checks for custom logo, html5, responsive embeds, align-wide, wp-block-styles
* Split the Style_Needed check into two: Screen_Reader_Text_Check and Style_CSS_Header_Check